# capskip-python

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
capskip/: __init__.py  _api_params.py  api.py  async_api.py  async_solver.py  exceptions.py  solver.py
docs/: API_REFERENCE.md  GETTING_STARTED.md  TROUBLESHOOTING.md  TUTORIAL.md
examples/: async_example.py  image_captcha.py  recaptcha.py  turnstile.py  verify_connection.py
tests/: abstract.py  abstract_async.py  conftest.py  test_async_normal.py  test_async_recaptcha.py  test_async_turnstile.py  test_integration.py  test_normal.py  test_poll_parsing.py  test_recaptcha.py  test_submit_parsing.py  test_turnstile.py
