[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capskip"
version = "1.0.1"
description = "Python SDK for the CapSkip local captcha solver"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CapSkip", email = "support@capskip.com" }]
keywords = [
    "captcha",
    "captcha-solver",
    "recaptcha",
    "cloudflare",
    "turnstile",
    "capskip",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://capskip.com"
Documentation = "https://github.com/capskip/capskip-python/blob/main/docs/GETTING_STARTED.md"
Repository = "https://github.com/capskip/capskip-python"
"Bug Tracker" = "https://github.com/capskip/capskip-python/issues"
Changelog = "https://github.com/capskip/capskip-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["capskip*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["capskip"]
omit = ["tests/*", "examples/*"]
